<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/horizontalpadding">
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/usuariom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:textColorHint="@color/TextColor"
                app:met_floatingLabel="highlight"
                android:hint="@string/user" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cedulam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cedula_p" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nombrem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_p" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/apellidom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido_p" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/fechanm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/button1"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="@dimen/fab_margin"
                android:paddingLeft="5dp"
                android:text="@string/fecha_n_p"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/direccionm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direccion_p"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/telefonom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono_p" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/correom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_p" />
            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/especialidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:textColorHint="@color/TextColor"
                app:met_floatingLabel="highlight"
                android:hint="@string/especialidad" />
            <Button
                android:id="@+id/insert_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buttonE"
                android:theme="@style/RaisedButtonDark"
                android:layout_marginTop="@dimen/fab_margin"
                android:textColorHint="@color/EditTextColorWhite"
                android:textColor="@color/EditTextColorWhite"

                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>