<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/horizontalpadding">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cedular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cedula_p" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nombrer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_p" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/apellidor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido_p" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/fechanr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/button1"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="@dimen/fab_margin"
                android:paddingLeft="5dp"
                android:text="@string/fecha_n_p"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/direccionr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direccion_p"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/telefonor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono_p" />
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/correor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_p" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/insert_recep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buttonE"
                android:onClick="insertRecepcionista"
                android:theme="@style/RaisedButtonDark"
                android:layout_marginTop="@dimen/fab_margin"
                android:textColorHint="@color/EditTextColorWhite"
                android:textColor="@color/EditTextColorWhite"

                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>